nginx-ingrees-controller/webapp.yml
apiVersion: v1
kind: Service
metadata:
  name: webapp-react-nginx
  namespace: ingress 
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: webapp-react-nginx
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-react-nginx
  namespace: ingress 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp-react-nginx
  template:
    metadata:
      labels:
        app: webapp-react-nginx
    spec:
      containers:
      - name: webapp-react-nginx
        image: zneetesh/react:v14
        ports:
        - containerPort: 3000
